# Spectroscopic-Analyzer

./: .gitignore  .pre-commit-config.yaml  7_iteration_3_exported.asc  AIC-SE-85.txt  CHANGELOG.md  CITATION.cff  CITATION_INFO.md  COMPLETE_SETUP_SUMMARY.md  DOCUMENTATION_GUIDE.md  FILES_CREATED.md  FINAL_REPORT.md  FINAL_STATUS.md  INDEX.md  LAUNCH_CHECKLIST.md  METADATA_DIFFS.md  MODEL_CARD.md  PUBLICATION_CHECKLIST.md  PUBLICATION_SUMMARY.txt  README.md  REPOSITORY_SETUP_SUMMARY.md  REPRODUCE.md  ROADMAP.md  START_HERE.md  VERIFICATION_COMPLETE.md  VERIFICATION_REPORT.md  ds.xlsx  full.xlsx  pyproject.toml  requirements-dev.txt  requirements.txt  sampel-12.xlsx  setup.py
.github/: pull_request_template.md
.github/workflows/: bump-publish.yml  tests.yml
app/: main.py  model.py  processing.py  worker.py
app/core/: analysis.py
app/ui/: batch_dialog.py  control_panel.py  control_panel_improved.py  main_window.py  main_window_fileutils.py  main_window_improved.py  panel_style.py  results_panel.py  worker.py
app/ui/panels/: left_panel.py  right_panel.py
data/: README.md
docs/: DEVELOPMENT.md  PARAMETERS.md  openapi.yaml
example-asc/: 10_iteration_1.asc  10_iteration_2.asc  10_iteration_3.asc  11_iteration_1.asc  11_iteration_2.asc  11_iteration_3.asc  12_iteration_1.asc  12_iteration_2.asc  12_iteration_3.asc  13_iteration_1.asc  13_iteration_2.asc  13_iteration_3.asc  1_iteration_1.asc  1_iteration_2.asc  1_iteration_3.asc  2_iteration_1.asc  2_iteration_2.asc  2_iteration_3.asc  3_iteration_1.asc  3_iteration_2.asc  3_iteration_3.asc  4_iteration_1.asc  4_iteration_2.asc  4_iteration_3.asc  5_iteration_1.asc  5_iteration_2.asc  5_iteration_3.asc  6_iteration_1.asc  6_iteration_2.asc  6_iteration_3.asc  7_iteration_1.asc  7_iteration_2.asc  7_iteration_3.asc  8_iteration_1.asc  8_iteration_2.asc  8_iteration_3.asc  9_iteration_1.asc  9_iteration_2.asc  9_iteration_3.asc  sa.xlsx
outputs/: README.md
preset/: a.json
scripts/: README.md  conv.py  eval.py  job-merge.sh  merge.py  planner.py  train.py
