[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "informer-libs-multielement"
version = "1.0.0"
description = "Informer-based deep learning for qualitative multi-element LIBS analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Birrul Walidain", email = "birrul@mhs.usk.ac.id"},
    {name = "Nasrullah Idris", email = "nasrullah.idris@usk.ac.id"},
    {name = "Khairun Saddami"},
    {name = "Natasya Yuzza"},
    {name = "Rara Mitaphonna"},
]
maintainers = [
    {name = "Birrul Walidain", email = "birrul@mhs.usk.ac.id"},
]
keywords = ["informer", "LIBS", "multi-element", "deep-learning", "spectroscopy", "plasma", "chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "torch>=1.9.0",
    "PySide6>=6.2.0",
    "pyqtgraph>=0.12.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
]
optional-dependencies = {
    dev = [
        "black>=22.0",
        "flake8>=4.0",
        "mypy>=0.950",
        "pytest>=7.0",
    ],
    docs = [
        "sphinx>=4.0",
        "sphinx-rtd-theme>=1.0",
    ],
}

[project.urls]
Homepage = "https://github.com/birrulwaldain/informer-libs-multielement"
Repository = "https://github.com/birrulwaldain/informer-libs-multielement"
Documentation = "https://github.com/birrulwaldain/informer-libs-multielement"
"Bug Tracker" = "https://github.com/birrulwaldain/informer-libs-multielement/issues"
"Source Code" = "https://github.com/birrulwaldain/informer-libs-multielement"
Paper = "https://iopscience.iop.org/"

[project.scripts]
informer-libs-multielement = "app.main:main"
